fixing project container margin, too big on bottom

--- a/source/assets/stylesheets/components/_about.scss
+++ b/source/assets/stylesheets/components/_about.scss
@@ -11,7 +11,7 @@
 
 .anchor {
   position: absolute;
-  transform: translateY(-5vh);
+  transform: translateY(-10vh);
 }
 
 .about-card {
@@ -24,7 +24,7 @@
   opacity: 0.8;
   word-spacing: 5px;
   font-size: 12px;
-  margin-bottom: 30px;
+  margin-bottom: 70px;
   & p {
   color: white;
   font-family: 'episode';
@@ -75,7 +75,6 @@
   }
   .about-card {
     font-size: 16px;
-    margin-bottom: 30px;
   }
 }
 
